--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "style-loader": "^0.20.3",
     "three": "^0.91.0",
     "three-orbitcontrols": "^2.0.0",
+    "threejs-utils": "^0.1.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
